--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,9 @@
 title: OffSecNinja Pentest Blog
 email: offsecninja@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- Founder of #OffSecNinjas | Hacker | Vulnerability Research |
- Malware Analysis | Reverse Engineering | Penetration Tester|
+ Founder of #OffSecNinjas
+ | Hacker | Vulnerability Research |
+ Malware Analysis | Reverse Engineer | Penetration Tester|
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
