--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: OffSecNinja's Pentest Blog
 email: offsecninja@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- Founder of #OffSecNinjas<br />
+ Founder of #OffSecNinjas
  | Hacker | Vulnerability Research |
  Malware Analysis | Reverse Engineer | Penetration Tester |
 baseurl: "" # the subpath of your site, e.g. /blog
